--- a/client/src/views/Home/Home.css
+++ b/client/src/views/Home/Home.css
@@ -1,27 +1,19 @@
-body {
-    margin: 0;
+.nav-logo {
+    display:flex;
+    height: 100px;
+    width: 100px;
+    padding: 10%;
+    z-index: -1;
 }
 
-.App {
-    text-align: center;
-    background: #282c34;
-}
-
-.App-logo {
-    height: 40vmin;
-}
-
-.App-header {
-    background-color: #282c34;
-    min-height: 100vh;
+.sign-up {
+    width: 80%;
+    margin: auto;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
 }
 
-.App-link {
-    color: #09d3ac;
+.sign-up > * {
+    margin: .75rem;
 }
+
