--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -5,16 +5,17 @@
 
 // Set your brand colors
 $cyan: #01FFFF;
-$purple: #8a4d76;
+$purple: #7C77B9;
 $pink: #fa7c91;
-$brown: #757763;
+$black: #151D21;
+$grey: #ABB6C7;
 $beige-light: #d0d1cd;
 $beige-lighter: #eff0eb;
 
 // Update Bulma's global variables
 $family-sans-serif: 'Nunito', sans-serif;
-$grey-dark: $brown;
-$grey-light: $beige-light;
+$grey-dark: $black;
+$grey-light: $grey;
 $primary: $cyan;
 $link: $pink;
 $widescreen-enabled: false;
