Initial branch edits

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -32,7 +32,9 @@ $input-shadow: none;
 // @import '../node_modules/bulma/sass/utilities/_all.sass';
 // @import '../node_modules/bulma/sass/base/_all.sass';
 // @import '../node_modules/bulma/sass/elements/button.sass';
-// @import '../node_modules/bulma/sass/elements/container.sass';
+
+/* container allows the card component to be imported from Bulma */
+@import '../node_modules/bulma/sass/elements/container.sass';
 // @import '../node_modules/bulma/sass/elements/form.sass';
 // @import '../node_modules/bulma/sass/elements/title.sass';
 // @import '../node_modules/bulma/sass/form/_all.sass';
