Basic forum page functionality

--- a/client/src/views/Forum/Forum.css
+++ b/client/src/views/Forum/Forum.css
@@ -5,3 +5,15 @@
 .Comment-box{
     width: 500px;
 }
+
+.left-side{
+	float: left;
+	width: 10%;
+	padding: 10px;
+}
+
+.right-side{
+	float: left;
+	width: 90%;
+	padding: 20px;
+}
