--- a/client/src/views/Admin/Admin.css
+++ b/client/src/views/Admin/Admin.css
@@ -30,6 +30,18 @@ input[type='text'] {
 	height: 4rem;
 }
 
+input[type='password'] {
+	margin: 1rem;
+	background: #fff;
+	font-size: 1.3rem;
+	border: none;
+	box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
+	border-radius: 3px;
+	padding: 0 2rem;
+	width: calc(100% - 2rem);
+	height: 4rem;
+}
+
 /* ##### NamesList ##### */
 tr {
 	padding: 0;
