--- a/client/src/views/Courses/Courses.css
+++ b/client/src/views/Courses/Courses.css
@@ -1,9 +1,7 @@
 .course-list {
-    max-width: 1200px;
-    margin: 0 auto;
     display: grid;
-    grid-gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
-/* .course-list > * {
+.course-list > * {
     margin: .75rem;
-} */
+}
