--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -41,3 +41,8 @@ $input-shadow: none;
 // @import '../node_modules/bulma/sass/components/navbar.sass';
 // @import '../node_modules/bulma/sass/layout/hero.sass';
 // @import '../node_modules/bulma/sass/layout/section.sass';
+
+/* media object is a layout provided by Bulma, used for forum posts */
+@import '../node_modules/bulma/sass/layout/_all.sass';
+/* media object is a layout provided by Bulma, used for message box on initial visit to 'forum' */
+@import '../node_modules/bulma/sass/components/_all.sass';
