--- a/client/src/views/Forum/Forum.css
+++ b/client/src/views/Forum/Forum.css
@@ -13,11 +13,15 @@
 .rm-button{
 	background: #d7d7d7;
 	color: #3b3b3b;
-	padding: 0.3rem 0.5rem;
+	
 	font-size: 0.5rem;
 	border: solid 1px #c7c7c7;
 	margin: 0.5rem 0;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
 	border-radius: 1px;
 	outline: none;
+}
+
+.post-view{
+	padding: 1rem 1rem;
 }
