--- a/client/src/views/Forum/Forum.css
+++ b/client/src/views/Forum/Forum.css
@@ -9,6 +9,27 @@
 .right-side{
 	flex-grow: 2;
 }
+
+/* sets the color for the dynamic main box featuring posts to white */
+.forum-body-container {
+	background-color: #FFFFFF;
+}
+.rm-button{
+	background: #d7d7d7;
+	color: #3b3b3b;
+	
+	font-size: 0.5rem;
+	border: solid 1px #c7c7c7;
+	margin: 0.5rem 0;
+	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+	border-radius: 1px;
+	outline: none;
+}
+
+.post-view{
+	padding: 1rem 1rem;
+}
+
 .Ref-box{
 	float: right
 }
