--- a/client/src/views/Admin/Admin.css
+++ b/client/src/views/Admin/Admin.css
@@ -93,7 +93,7 @@
 .credit a {
 	color: #3498bb;
 }
-.button {
+/* .button {
 	background: #d7d7d7;
 	color: #3b3b3b;
 	padding: 0.6rem 1rem;
@@ -103,4 +103,4 @@
 	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
 	border-radius: 3px;
 	outline: none;
-}
+} */
