--- a/client/src/views/Forum/Forum.css
+++ b/client/src/views/Forum/Forum.css
@@ -3,11 +3,11 @@
 }
 
 .left-side{
-	flex-grow: 1;
+	flex: 1;
 }
 
 .right-side{
-	flex-grow: 2;
+	flex: 2;
 }
 
 /* sets the color for the dynamic main box featuring posts to white */
