--- a/client/src/views/Forum/Forum.css
+++ b/client/src/views/Forum/Forum.css
@@ -22,3 +22,11 @@
 	border-radius: 1px;
 	outline: none;
 }
+
+input[type=text], search-input {
+	width:98%;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-right: .5em;
+    padding:1em;
+}
