--- a/client/src/views/Blog/Forum.css
+++ b/client/src/views/Blog/Forum.css
@@ -1,14 +1,20 @@
 .forum {
-	display: flex
+    display: flex;
+    height: 100%;
 }
 
 .left-side{
-	flex: 1;
+    flex: 1;
+    height:100%;
+    overflow-y:auto;
 }
 
 .right-side{
-	flex: 2;
+    flex: 2;
+    height:100%;
+    overflow-y:auto;
 }
+
 
 /* sets the color for the dynamic main box featuring posts to white */
 .rm-button{
