Fix payments page

--- a/client/src/views/Courses/Courses.css
+++ b/client/src/views/Courses/Courses.css
@@ -1,6 +1,6 @@
 .course-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: 1fr 1fr 1fr;
 }
 .course-list > * {
     margin: .75rem;
